# forgestack

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEMO_TRANSCRIPT.md  LICENSE  README.md  SECURITY.md  config.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: demo.cast
examples/: demo.sh
src/forgestack/: __init__.py  config.py
src/forgestack/agents/: __init__.py  base.py  critic.py  generator.py  synthesizer.py
src/forgestack/cli/: __init__.py  main.py
src/forgestack/codebase/: __init__.py  discovery.py  git.py  reader.py  repos.py
src/forgestack/mcp/: __init__.py  client.py  loader.py  router.py
src/forgestack/orchestrator/: __init__.py  critique_round.py  engine.py
src/forgestack/persistence/: __init__.py  database.py  models.py
src/forgestack/prompts/: __init__.py  critic.md  generator.md  master_prompt.md  synthesizer.md
src/forgestack/utils/: __init__.py  formatting.py  logging.py
tests/: __init__.py  test_agents.py  test_orchestrator.py  test_persistence.py
