[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forgestack"
version = "0.1.0"
description = "Multi-agent Claude critique engine for code analysis"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ajvelo", email = "26522950+ajvelo@users.noreply.github.com" }]
maintainers = [{ name = "ajvelo", email = "26522950+ajvelo@users.noreply.github.com" }]
keywords = ["claude", "ai", "code-review", "multi-agent", "llm", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/ajvelo/forgestack"
Repository = "https://github.com/ajvelo/forgestack"
Issues = "https://github.com/ajvelo/forgestack/issues"

dependencies = [
    "anthropic>=0.39.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "aiosqlite>=0.19.0",
    "gitpython>=3.1.40",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]

[project.scripts]
forgestack = "forgestack.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/forgestack"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
